--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="thermal_camera">Camera</string>
     <string name="thermal_dialer">Dialer</string>
     <string name="thermal_gaming">Gaming</string>
-    <string name="thermal_youtube">Youtube</string>
+    <string name="thermal_streaming">Streaming</string>
 
     <!-- Touch Control Settings -->
     <string name="touch_control_title">Touch Control</string>
